--- a/BlazorMovies/Client/BlazorMovies.Client.csproj
+++ b/BlazorMovies/Client/BlazorMovies.Client.csproj
@@ -6,10 +6,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Markdig" Version="0.18.1" />
     <PackageReference Include="Microsoft.AspNetCore.Blazor" Version="3.1.0-preview4.19579.2" />
     <PackageReference Include="Microsoft.AspNetCore.Blazor.Build" Version="3.1.0-preview4.19579.2" PrivateAssets="all" />
     <PackageReference Include="Microsoft.AspNetCore.Blazor.HttpClient" Version="3.1.0-preview4.19579.2" />
     <PackageReference Include="Microsoft.AspNetCore.Blazor.DevServer" Version="3.1.0-preview4.19579.2" PrivateAssets="all" />
+    <PackageReference Include="Tewr.Blazor.FileReader" Version="1.2.0.19363" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Shared\BlazorMovies.Shared.csproj" />
